# sceodesic

./: LICENSE  README.md  pyproject.toml
sceodesic/: __init__.py  config.yaml  sceo.py
sceodesic/helper/: __init__.py  compute_covariance.py  compute_responsibilities.py  compute_soft_embeddings.py  condition_volume_normalization.py  reassign_clusters.py  threshold_membership_matrix.py
sceodesic/sceo_io/: __init__.py  sceo_command_line_parser.py  sceo_load_input.py
sceodesic/sceo_main/: __init__.py  default_keys.py  estimate_covariances.py  get_cell_cohorts.py  get_locally_variable_genes.py  reconstruct_programs.py  run_sceo.py  write_embedding.py
sceodesic/utils/: __init__.py  batch_comps.py  fn_timer.py  order_by_second_moment.py
